# source-line-count

./: .rustfmt.toml  Cargo.toml  LICENSE.txt  README.md
src/: count.rs  lang.rs  main.rs  util.rs
src/tests/: c.rs  cs.rs  css.rs  cxx.rs  general.rs  h.rs  html.rs  java.rs  js.rs  mod.rs  python.rs  rust.rs  ts.rs
